Update for selinux

--- a/opensuse/containerhost/bitwarden/bitwarden.service
+++ b/opensuse/containerhost/bitwarden/bitwarden.service
@@ -3,7 +3,7 @@ Description=Bitwarden Service
 
 [Service]
 ExecStartPre=-/usr/bin/podman rm bitwarden
-ExecStart=/usr/bin/podman run --rm --name bitwarden -v /var/opt/bitwarden/data:/data/ -p 80:80/tcp vaultwarden/server
+ExecStart=/usr/bin/podman run --rm --name bitwarden -v /var/opt/bitwarden/data:/data/:z -p 80:80/tcp vaultwarden/server
 ExecStop=/usr/bin/podman stop bitwarden
 
 [Install]
